--- a/TaskAndBackStack/app/src/main/AndroidManifest.xml
+++ b/TaskAndBackStack/app/src/main/AndroidManifest.xml
@@ -8,13 +8,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:launchMode="standard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".SecondActivity"
+            android:launchMode="standard" />
+        <activity
+            android:name=".ThirdActivity"
+            android:launchMode="standard" />
     </application>
 
 </manifest>
