--- a/CustomContentProvider/app/src/main/AndroidManifest.xml
+++ b/CustomContentProvider/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.cook.customcontentprovider">
 
     <application
+        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
