--- a/DataBinding/app/src/main/AndroidManifest.xml
+++ b/DataBinding/app/src/main/AndroidManifest.xml
@@ -8,6 +8,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity android:name=".DataBindingActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
