--- a/DataBinding/app/build.gradle
+++ b/DataBinding/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     final SUPPORT_LIBRARY_VERSION = '23.1.1'
     testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+
 }
