--- a/BroadcastReceiver/app/build.gradle
+++ b/BroadcastReceiver/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.cook.databinding"
+        applicationId "com.cook.broadcastreceiver"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -26,10 +26,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    final SUPPORT_VERSION = '23.1.1'
+    final SUPPORT_LIBRARY_VERSION = '23.1.1'
 
     testCompile 'junit:junit:4.12'
-    compile "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
 }
