--- a/DataStorage/app/src/main/AndroidManifest.xml
+++ b/DataStorage/app/src/main/AndroidManifest.xml
@@ -12,12 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".externalStorage.ExternalStorageActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".externalStorage.ExternalStorageActivity"/>
+        <activity android:name=".internalStorage.InternalStorageActivity"/>
+        <activity android:name=".preferences.PrefActivity"/>
+
     </application>
 
 </manifest>
