--- a/DataStorage/app/src/main/AndroidManifest.xml
+++ b/DataStorage/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".externalStorage.ExternalStorageActivity"/>
         <activity android:name=".internalStorage.InternalStorageActivity"/>
         <activity android:name=".preferences.PrefActivity"/>
+        <activity android:name=".sqlite.SqliteActivity"/>
 
     </application>
 
