--- a/DataStorage/app/src/main/AndroidManifest.xml
+++ b/DataStorage/app/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cook.datastorage">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"  android:maxSdkVersion="18" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".sqlite.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,10 +22,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".externalStorage.ExternalStorageActivity"/>
-        <activity android:name=".internalStorage.InternalStorageActivity"/>
-        <activity android:name=".preferences.PrefActivity"/>
-        <activity android:name=".sqlite.SqliteActivity"/>
+        <activity android:name=".externalStorage.ExternalStorageActivity" />
+        <activity android:name=".internalStorage.InternalStorageActivity" />
+        <activity android:name=".preferences.PrefActivity" />
+        <activity android:name=".sqlite.SqliteActivity" />
 
     </application>
 
