--- a/Animations/app/src/main/AndroidManifest.xml
+++ b/Animations/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ActivitySimplePropertyAnimations"/>
+        <activity android:name=".ActivityPropertyAnimations"/>
+        <activity android:name=".ActivityViewAnimations"/>
     </application>
 
 </manifest>
