--- a/Animations/app/src/main/AndroidManifest.xml
+++ b/Animations/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".ActivityViewAnimations" />
         <activity android:name=".ActivityLayoutTransitions" />
         <activity android:name=".requestingLayout.ActivityTestRequestLayout"/>
+        <activity android:name=".keyframe.ActivityKeyFrame"/>
     </application>
 
 </manifest>
