--- a/Animations/app/src/main/AndroidManifest.xml
+++ b/Animations/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".requestingLayout.ActivityTestRequestLayout"/>
         <activity android:name=".keyframe.ActivityKeyFrame"/>
         <activity android:name=".crossfading.ActivityCrossFading"/>
+        <activity android:name=".viewPicture.ActivityViewPicture"/>
     </application>
 
 </manifest>
